[package]
authors      = ["Tony <repositony@outlook.com>"]
description  = "Command line tool to generate mesh-based weight windows"
edition      = "2021"
keywords     = ["mcnp", "mesh", "variance-reduction"]
license      = "GPL-3.0 license"
name         = "mesh2ww"
readme       = "readme.md"
repository   = "https://github.com/repositony/mesh2ww"
rust-version = "1.77"
version      = "0.1.14"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
clap = { version = "4.2", features = ["derive", "wrap_help"] }
log = "0.4"
ntools = { git = "https://github.com/repositony/ntools.git", features = [
    "mesh",
    "weights",
    "wwgen",
] }
serde = "1.0.200"
stderrlog = "0.6"
vtkio = { git = "https://github.com/elrnv/vtkio.git", rev = "0c14e90" }

[lints.rust]
unsafe_code = "forbid"

[[bin]]
doc  = false
name = "mesh2ww"
